src/main/java/grammar/MParser.java
/**
 * Copyright (C) 2013 Chris Barthauer <mumpsstampede@gmail.com>
 *
 * This file is part of STAMPEDE.
 *
 * STAMPEDE is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * STAMPEDE is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with STAMPEDE.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Contributors:
 *     Chris Barthauer - Initial API and implementation.
 */
// Generated from D:\netbeans_projects\MumpsAnalyzer\src\main\java\grammar\M.g4 by ANTLR 4.0

  package grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, COMMENT=2, CHAR=3, INTEGER=4, PERCENT=5, PAREN=6, PERIOD=7, COLON=8, 
		DOLLAR=9, COMMA=10, NEWLINE=11, OPERATOR=12, SEMICOLON=13, SPACE=14, STRING_LITERAL=15, 
		DO=16, ELSE=17, FOR=18, GOTO=19, IF=20, KILL=21, NEW=22, QUIT=23, READ=24, 
		SET=25, USE=26, WRITE=27, XECUTE=28, ID=29;
	public static final String[] tokenNames = {
		"<INVALID>", "'\"'", "COMMENT", "CHAR", "INTEGER", "'%'", "PAREN", "'.'", 
		"':'", "'$'", "','", "NEWLINE", "OPERATOR", "';'", "SPACE", "STRING_LITERAL", 
		"DO", "ELSE", "FOR", "GOTO", "IF", "KILL", "NEW", "QUIT", "READ", "SET", 
		"USE", "WRITE", "XECUTE", "ID"
	};
	public static final int
		RULE_argument = 0, RULE_cmdDo = 1, RULE_cmdElse = 2, RULE_cmdFor = 3, 
		RULE_cmdGoto = 4, RULE_cmdIf = 5, RULE_cmdKill = 6, RULE_cmdNew = 7, RULE_cmdQuit = 8, 
		RULE_cmdRead = 9, RULE_cmdSet = 10, RULE_cmdUse = 11, RULE_cmdWrite = 12, 
		RULE_cmdXecute = 13, RULE_cmdUnknown = 14, RULE_command = 15, RULE_identifier = 16, 
		RULE_levelLine = 17, RULE_postCondition = 18, RULE_routine = 19;
	public static final String[] ruleNames = {
		"argument", "cmdDo", "cmdElse", "cmdFor", "cmdGoto", "cmdIf", "cmdKill", 
		"cmdNew", "cmdQuit", "cmdRead", "cmdSet", "cmdUse", "cmdWrite", "cmdXecute", 
		"cmdUnknown", "command", "identifier", "levelLine", "postCondition", "routine"
	};

	@Override
	public String getGrammarFileName() { return "M.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public MParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ArgumentContext extends ParserRuleContext {
		public TerminalNode SPACE(int i) {
			return getToken(MParser.SPACE, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(MParser.NEWLINE); }
		public List<TerminalNode> SPACE() { return getTokens(MParser.SPACE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MParser.NEWLINE, i);
		}
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).exitArgument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MVisitor ) return ((MVisitor<? extends T>)visitor).visitArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_argument);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(40);
					_la = _input.LA(1);
					if ( _la <= 0 || ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << NEWLINE) | (1L << SPACE))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(43); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdDoContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public TerminalNode DO() { return getToken(MParser.DO, 0); }
		public PostConditionContext postCondition() {
			return getRuleContext(PostConditionContext.class,0);
		}
		public TerminalNode SPACE() { return getToken(MParser.SPACE, 0); }
		public CmdDoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdDo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).enterCmdDo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).exitCmdDo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MVisitor ) return ((MVisitor<? extends T>)visitor).visitCmdDo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdDoContext cmdDo() throws RecognitionException {
		CmdDoContext _localctx = new CmdDoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_cmdDo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); match(DO);
			setState(47);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(46); postCondition();
				}
			}

			setState(51);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(49); match(SPACE);
				setState(50); argument();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdElseContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public PostConditionContext postCondition() {
			return getRuleContext(PostConditionContext.class,0);
		}
		public TerminalNode SPACE() { return getToken(MParser.SPACE, 0); }
		public TerminalNode ELSE() { return getToken(MParser.ELSE, 0); }
		public CmdElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdElse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).enterCmdElse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).exitCmdElse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MVisitor ) return ((MVisitor<? extends T>)visitor).visitCmdElse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdElseContext cmdElse() throws RecognitionException {
		CmdElseContext _localctx = new CmdElseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cmdElse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53); match(ELSE);
			setState(55);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(54); postCondition();
				}
			}

			setState(59);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(57); match(SPACE);
				setState(58); argument();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdForContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public TerminalNode FOR() { return getToken(MParser.FOR, 0); }
		public PostConditionContext postCondition() {
			return getRuleContext(PostConditionContext.class,0);
		}
		public TerminalNode SPACE() { return getToken(MParser.SPACE, 0); }
		public CmdForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdFor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).enterCmdFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).exitCmdFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MVisitor ) return ((MVisitor<? extends T>)visitor).visitCmdFor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdForContext cmdFor() throws RecognitionException {
		CmdForContext _localctx = new CmdForContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cmdFor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); match(FOR);
			setState(63);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(62); postCondition();
				}
			}

			setState(67);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(65); match(SPACE);
				setState(66); argument();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdGotoContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public PostConditionContext postCondition() {
			return getRuleContext(PostConditionContext.class,0);
		}
		public TerminalNode GOTO() { return getToken(MParser.GOTO, 0); }
		public TerminalNode SPACE() { return getToken(MParser.SPACE, 0); }
		public CmdGotoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdGoto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).enterCmdGoto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).exitCmdGoto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MVisitor ) return ((MVisitor<? extends T>)visitor).visitCmdGoto(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdGotoContext cmdGoto() throws RecognitionException {
		CmdGotoContext _localctx = new CmdGotoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cmdGoto);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); match(GOTO);
			setState(71);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(70); postCondition();
				}
			}

			setState(75);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(73); match(SPACE);
				setState(74); argument();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdIfContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public PostConditionContext postCondition() {
			return getRuleContext(PostConditionContext.class,0);
		}
		public TerminalNode SPACE() { return getToken(MParser.SPACE, 0); }
		public TerminalNode IF() { return getToken(MParser.IF, 0); }
		public CmdIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).enterCmdIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).exitCmdIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MVisitor ) return ((MVisitor<? extends T>)visitor).visitCmdIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdIfContext cmdIf() throws RecognitionException {
		CmdIfContext _localctx = new CmdIfContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cmdIf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); match(IF);
			setState(79);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(78); postCondition();
				}
			}

			setState(83);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(81); match(SPACE);
				setState(82); argument();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdKillContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public PostConditionContext postCondition() {
			return getRuleContext(PostConditionContext.class,0);
		}
		public TerminalNode SPACE() { return getToken(MParser.SPACE, 0); }
		public TerminalNode KILL() { return getToken(MParser.KILL, 0); }
		public CmdKillContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdKill; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).enterCmdKill(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).exitCmdKill(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MVisitor ) return ((MVisitor<? extends T>)visitor).visitCmdKill(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdKillContext cmdKill() throws RecognitionException {
		CmdKillContext _localctx = new CmdKillContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cmdKill);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); match(KILL);
			setState(87);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(86); postCondition();
				}
			}

			setState(91);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(89); match(SPACE);
				setState(90); argument();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdNewContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public TerminalNode NEW() { return getToken(MParser.NEW, 0); }
		public PostConditionContext postCondition() {
			return getRuleContext(PostConditionContext.class,0);
		}
		public TerminalNode SPACE() { return getToken(MParser.SPACE, 0); }
		public CmdNewContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdNew; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).enterCmdNew(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).exitCmdNew(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MVisitor ) return ((MVisitor<? extends T>)visitor).visitCmdNew(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdNewContext cmdNew() throws RecognitionException {
		CmdNewContext _localctx = new CmdNewContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cmdNew);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); match(NEW);
			setState(95);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(94); postCondition();
				}
			}

			setState(99);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(97); match(SPACE);
				setState(98); argument();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdQuitContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public PostConditionContext postCondition() {
			return getRuleContext(PostConditionContext.class,0);
		}
		public TerminalNode SPACE() { return getToken(MParser.SPACE, 0); }
		public TerminalNode QUIT() { return getToken(MParser.QUIT, 0); }
		public CmdQuitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdQuit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).enterCmdQuit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).exitCmdQuit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MVisitor ) return ((MVisitor<? extends T>)visitor).visitCmdQuit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdQuitContext cmdQuit() throws RecognitionException {
		CmdQuitContext _localctx = new CmdQuitContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cmdQuit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(QUIT);
			setState(103);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(102); postCondition();
				}
			}

			setState(107);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				{
				setState(105); match(SPACE);
				setState(106); argument();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdReadContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public PostConditionContext postCondition() {
			return getRuleContext(PostConditionContext.class,0);
		}
		public TerminalNode SPACE() { return getToken(MParser.SPACE, 0); }
		public TerminalNode READ() { return getToken(MParser.READ, 0); }
		public CmdReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdRead; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).enterCmdRead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).exitCmdRead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MVisitor ) return ((MVisitor<? extends T>)visitor).visitCmdRead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdReadContext cmdRead() throws RecognitionException {
		CmdReadContext _localctx = new CmdReadContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cmdRead);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); match(READ);
			setState(111);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(110); postCondition();
				}
			}

			setState(115);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(113); match(SPACE);
				setState(114); argument();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdSetContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public PostConditionContext postCondition() {
			return getRuleContext(PostConditionContext.class,0);
		}
		public TerminalNode SET() { return getToken(MParser.SET, 0); }
		public TerminalNode SPACE() { return getToken(MParser.SPACE, 0); }
		public CmdSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdSet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).enterCmdSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).exitCmdSet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MVisitor ) return ((MVisitor<? extends T>)visitor).visitCmdSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdSetContext cmdSet() throws RecognitionException {
		CmdSetContext _localctx = new CmdSetContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cmdSet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(SET);
			setState(119);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(118); postCondition();
				}
			}

			setState(123);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				{
				setState(121); match(SPACE);
				setState(122); argument();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdUseContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public PostConditionContext postCondition() {
			return getRuleContext(PostConditionContext.class,0);
		}
		public TerminalNode USE() { return getToken(MParser.USE, 0); }
		public TerminalNode SPACE() { return getToken(MParser.SPACE, 0); }
		public CmdUseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdUse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).enterCmdUse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).exitCmdUse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MVisitor ) return ((MVisitor<? extends T>)visitor).visitCmdUse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdUseContext cmdUse() throws RecognitionException {
		CmdUseContext _localctx = new CmdUseContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_cmdUse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125); match(USE);
			setState(127);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(126); postCondition();
				}
			}

			setState(131);
			switch ( getInterpreter().adaptivePredict(_input,22,_ctx) ) {
			case 1:
				{
				setState(129); match(SPACE);
				setState(130); argument();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdWriteContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public PostConditionContext postCondition() {
			return getRuleContext(PostConditionContext.class,0);
		}
		public TerminalNode SPACE() { return getToken(MParser.SPACE, 0); }
		public TerminalNode WRITE() { return getToken(MParser.WRITE, 0); }
		public CmdWriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdWrite; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).enterCmdWrite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MListener ) ((MListener)listener).exitCmdWrite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MVisitor ) return ((MVisitor<? extends T>)visitor).visitCmdWrite(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdWriteContext cmdWrite() throws RecognitionException {
		CmdWriteContext _localctx = new CmdWriteContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_cmdWrite);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); match(WRITE);
			setState(135);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(134); postCondition();
				}
			}

			setState(139);
			switch ( getInterpreter().adaptivePredict(_input,24,_ctx) ) {
			case 1:
				{
				setState(137); match(SPACE);
				setState(138); argument();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
